--- a/css/main.css
+++ b/css/main.css
@@ -331,4 +331,16 @@ nav {
     transform: translateX(0);
     display: flex !important;
   }
+}
+.loader__peges {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+}
+.loader__peges img {
+  width: 35%;
 }/*# sourceMappingURL=main.css.map */
