--- a/css/home.css
+++ b/css/home.css
@@ -332,6 +332,24 @@ nav {
     display: flex !important;
   }
 }
+.loader__peges {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+}
+.loader__peges img {
+  width: 35%;
+}
+
+#loader {
+  position: absolute;
+  z-index: 110;
+}
+
 @font-face {
   font-family: "Schoolbell";
   src: url(../Fonts/Schoolbell-Regular.ttf);
